# prepvista

./: .gitignore  DEBUG_LOGS_GUIDE.md  DEPLOYMENT_FIX.md  Dockerfile  MIDDLEWARE_DEBUG_GUIDE.md  PAYMENT_SETUP.md  PrepVista_RAG_Postman_Collection.json  RAG_README.md  RAG_Testing_Guide.md  README.md  SESSION_SYSTEM_README.md  SETUP.md  cypress.config.js  package-lock.json  package.json  postman-prepvista-ai.json  rzp.csv  setup-backend.sh  start-frontend.sh  start-system.sh  tailwind.config.js  test-session.py  test_conversation_api.js  vercel.json
.next/: trace
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
ai-backend/: .dockerignore  .env  Dockerfile  POETRY_README.md  embedding_service.py  main.py  pdf_processor.py  prompt.yml  pyproject.toml  rag_service.py  regenerate-lock.sh  render.yaml  requirements.txt  run-dev.sh  setup-poetry.sh  setup-rag.sh  vector_storage.py
ai-backend/api/: index.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env  Dockerfile  env.example  main.py  requirements.txt
components/: ExamSelection.tsx  Header.tsx  QuestionPractice.tsx
config/: api.ts
cypress/e2e/: auth_signin.cy.js  auth_signup.cy.js  login.cy.js
docs/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  SESSION_SYSTEM_README.md  SETUP.md  TROUBLESHOOTING.md
frontend/: .env  .env.example  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup-auth.sh  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
frontend/.next/: app-build-manifest.json  trace
lib/: api.ts
scripts/: deploy.sh  docker-compose.yml  pnpm-lock.yaml  quick-start.sh  setup-backend.sh  start-backend.sh  start-system.sh
tests/: test-api.py  test-session.py  test-setup.py
(+275 files in other folders)
